tests/fixtures/invalid/resources/views/invalid-has.blade.php
<?php

{{ Config::has('app.invalid_key') }}
